# mittu

./: .gitignore  README.md  convert_excel_to_csv.py  dashboard.py  data_cleaning_script.py  data_processor.py  join_data.py  pyproject.toml  run_dashboard.py
case/: case_analista_dados_base.xlsx
data/cleaned/: Custos_clean.csv  Horas_clean.csv  KPIs_clean.csv  Projetos_clean.csv
data/csv/: Custos_raw.csv  Horas_raw.csv  KPIs_raw.csv  LEIA_ME.csv  Projetos_raw.csv
data/logs/: cleaning_report.txt  warnings_analysis.txt
entregaveis/: Análise de Gestão de Projetos.docx  Dashboard Mittu.pbix
