[project]
name = "mittu"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Cavalcante dos Santos",email = "cavalcanteprofissional@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0", 
    "plotly>=5.17.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
